--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,27 @@
-{"name": "test-magenx/module-msrp-grouped-product", "description": "N/A", "config": {"sort-packages": true}, "require": {"php": "~7.4.0||~8.0.0", "magento/framework": "*", "magento/module-catalog": "*", "magento/module-msrp": "*", "magento/module-grouped-product": "*"}, "type": "magento2-module", "license": ["OSL-3.0", "AFL-3.0"], "autoload": {"files": ["registration.php"], "psr-4": {"Magento\\MsrpGroupedProduct\\": ""}}}
+{
+    "name": "test-magenx/module-msrp-grouped-product",
+    "description": "N/A",
+    "config": {
+        "sort-packages": true
+    },
+    "require": {
+        "php": "~7.4.0||~8.0.0",
+        "magento/framework": "*",
+        "magento/module-catalog": "*",
+        "magento/module-msrp": "*",
+        "magento/module-grouped-product": "*"
+    },
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Magento\\MsrpGroupedProduct\\": ""
+        }
+    }
+}
